[am] Fix for the scroll jumping bug
Before: https://screencast.googleplex.com/cast/NDkzNTkxMjUwNzA0NzkzNnwxNWZlM2U2Yy1hMg
After: https://screencast.googleplex.com/cast/NTI4OTkzMzUwNzkxOTg3MnwwMzAyYTgzZC02ZA

Got the fix from https://stackoverflow.com/questions/17974108/how-can-i-prevent-the-browser-from-scrolling-on-top-of-the-page-when-clicking-th/17974351#17974351

Bug: skia:

--- a/am/modules/alert-manager-sk/alert-manager-sk.scss
+++ b/am/modules/alert-manager-sk/alert-manager-sk.scss
@@ -102,6 +102,11 @@ alert-manager-sk {
   .incidents {
     checkbox-sk {
       display: inline-block;
+
+      /* See skbug.com/xyz */
+      input {
+        display: none;
+      }
     }
 
     h2 {
